# player-status-modifier

./: README.md
fix162/: BUILD.md  CMakeLists.txt  NEXUS_CHANGELOG_FIX162.md  README.md  RELEASE_NOTES_FIX162.md
fix162/src/: config.h  (+5 more)
fix201/: BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY_SCAN_NOTES_FIX201.md  SHA256SUMS.txt
fix201/src/: key_listener.h  mod_logic.cpp  mod_logic.h  ptrchain_resources.cpp  scanner.cpp  version.rc
fix201/src/hooks/: economy_hooks.cpp
fix201/src/runtime/: actor_resolve.cpp  actor_resolve.h  damage_logic.cpp  runtime_state.cpp  spirit_watcher.cpp  stat_logic.cpp
fix201/tools/: scan_dropset_friendly.py
fix204/: CHANGELOG.md  CMakeLists.txt  PACKAGE_MANIFEST_FIX204.md
fix280/: BUILD_FIX204.md  CHANGELOG.md  CMakeLists.txt  GITHUB_READY_MANIFEST.md  README.md  README_FIX204.md
fix309/: BUILD_D100.md  BUILD_D101.md  CMakeLists.txt  SECURITY_SCAN_NOTES.md
fix57/: AGENTS.md  ASI_INI_RUNTIME_MAPPING_1.05.01.md  CONFIG_LAYERS_README.md  FIX18_STAMINA_BOOTSTRAP_DEADLOCK_GUARD.md  FIX23_GROUND_MOUNT_LIVENESS_REFRESH.md  FIX25_GUARDED_STARTUP_NO_DIRECT_DURABILITY.md  FIX32_AFFINITY_ITEM_EVENT_PROBES.md  FIX38_DAMAGE_ONLY_AFFINITY100.md  FIX43_AFFINITY_DIAGNOSTICS_GATED.md  FIX46_LAYERED_CONFIG_PRECEDENCE.md  FIX47_V1001235_COMPAT.md  FIX48_MOUNT_STATWRITE_LEGACY_INI.md  FIX49_V1001245_COMPAT.md  FIX50_STAMINA_SPIRIT_DIAGNOSTICS.md  FIX51_SPECIAL_MOUNT_RESEARCH.md  FIX52_RIDEABLE_PROXY_MOUNT.md  FIX53_MOUNT_SPIRIT_STAMINA_LOCK.md  FIX54_MOUNT_SPIRIT_HOOK_ROUTE.md  FIX55_STAMINA_AB00_SPIRIT_ROUTE.md  FIX56_MOUNTED_SPIRIT_STAMINA_HARDLOCK.md  FIX57_MOUNTED_TYPE18_STAMINA_HARDLOCK.md  FIX9_STABLE_FROM_FIX3_DAMAGE_AND_AFFINITY_GUARD.md  GITHUB_UPLOAD_NOTES_FIX32.md  GITHUB_UPLOAD_NOTES_FIX44.md  GITHUB_UPLOAD_NOTES_FIX46.md  GITHUB_UPLOAD_NOTES_FIX47.md  GITHUB_UPLOAD_NOTES_FIX48.md  GITHUB_UPLOAD_NOTES_FIX49.md  GITHUB_UPLOAD_NOTES_FIX57.md  NEXUS_CHANGELOG_FIX44.md  NEXUS_CHANGELOG_FIX45.md  NEXUS_CHANGELOG_FIX46.md  NEXUS_CHANGELOG_FIX47.md  NEXUS_CHANGELOG_FIX48.md  NEXUS_CHANGELOG_FIX49.md  NEXUS_CHANGELOG_FIX57.md  RUNTIME_FIX_11_OUTGOING_DAMAGE_STAT_WRITE.md  SAFE_BUILD.md  player-status-modifier.affinity-diagnostics.ini  player-status-modifier.affinity.ini  (+5 more)
player-status-modifier-v1.05.01-RVA-FIXED-fix22/: BUILD_FIX_12B_SHARED_POINTER_CONSTANT.md  FIX17_STAMINA_MOUNT_IDENTITY_GUARD.md  FIX19_MOUNT_STAT_COMPONENT_RESOLVER.md  GITHUB_UPLOAD_NOTES_FIX22.md  README.md  RUNTIME_FIX_14_TRACKING_HARD_GUARD.md  RUNTIME_FIX_2_ITEM_AND_FALL_DAMAGE.md  RVA_FIXED_FIX18_ANALYSIS_REPORT.md  SHA256SUMS.txt  VERSION_UPDATE.md  player-status-modifier.default.ini
player-status-modifier-v1.05.01-RVA-FIXED-fix39/: FIX16_RESISTANCE_AND_HORSE_MOUNT_NOTES.md  FIX29_AFFINITY_LOGOUT_CALLSITE.md  FIX33_AFFINITY_ITEM_EVENT_STACK_MAP.md  FIX37_AFFINITY_DONATE_CAP_GIFT_PET_OPEN.md  GITHUB_UPLOAD_NOTES_FIX27.md  GITHUB_UPLOAD_NOTES_FIX28.md  GITHUB_UPLOAD_NOTES_FIX31.md  GITHUB_UPLOAD_NOTES_FIX33.md  GITHUB_UPLOAD_NOTES_FIX35.md  GITHUB_UPLOAD_NOTES_FIX36.md  GITHUB_UPLOAD_NOTES_FIX37.md  JSON_CONFIG_STATUS.md  RUNTIME_FIX_12_NON_AFFINITY_FUNCTIONS.md  RUNTIME_FIX_3_DAMAGE_HEALTH_WRITE_FALLBACK.md  SHA256SUMS.txt  durability.md  player-status-modifier.damage-only.ini  player-status-modifier.default.ini  player-status-modifier.ini  (+1 more)
player-status-modifier-v1.05.01-RVA-FIXED-fix45/: BUG_FIXES.md  CMakeLists.txt  CONFIG_LAYERS_README.md  CRIMSON_DESERT_1.05.01_SCAN_REPORT.md  FIX20_MOUNT_ACTIVE_RELOCK.md  FIX21_GROUND_MOUNT_PROFILE.md  FIX22_GROUND_MOUNT_SANITY_GUARD.md  FIX26_NORMAL_STARTUP_NO_DIRECT_DURABILITY.md  FIX27_AFFINITY_FRIENDLY_DIAGNOSTICS.md  FIX28_AFFINITY_FRIENDLY_COPY_SCALER.md  FIX31_AFFINITY_LOGOUT_R9_DIAGNOSTICS.md  FIX39_AFFINITY_BROAD_FRIENDLY_DIAGNOSTIC.md  FIX42_SAFE_RUNTIME_REBUILD.md  FIX44_SPLIT_CONFIG_DEFAULTS.md  FIX45_LAYERED_CONFIG_MERGE.md  GITHUB_UPLOAD_NOTES_FIX29.md  GITHUB_UPLOAD_NOTES_FIX38.md  GITHUB_UPLOAD_NOTES_FIX39.md  GITHUB_UPLOAD_NOTES_FIX42.md  GITHUB_UPLOAD_NOTES_FIX43.md  GITHUB_UPLOAD_NOTES_FIX45.md  NEXUS_CHANGELOG_FIX42.md  NEXUS_CHANGELOG_FIX43.md  README.md  RUNTIME_FIX_13_TRACKING_GUARD.md  player-status-modifier.affinity-diagnostics.ini  player-status-modifier.affinity.ini  player-status-modifier.health.ini  player-status-modifier.items.ini  player-status-modifier.resistance.ini  player-status-modifier.stamina-spirit.ini  position_research.md
player-status-modifier-v1.05.01-RVA-FIXED-fix45/researches/: affinity_pe_route_scan_fix33_trust.txt  fix39_dropset_friendly_candidates.csv  fix42_pet_gift_next_steps.md
player-status-modifier-v1.05.01-RVA-FIXED-fix45/src/: config.cpp  config.h  config_watcher.cpp  dllmain.cpp  mod_logic.cpp  scanner.cpp
player-status-modifier-v1.05.01-RVA-FIXED-fix45/src/hooks/: affinity_hooks.cpp  economy_hooks.cpp
player-status-modifier-v1.05.01-RVA-FIXED-fix45/src/runtime/: affinity_logic.h  damage_logic.cpp  mount_resolver.h  stat_logic.cpp
player-status-modifier-v1.05.01-RVA-FIXED-fix45/tools/: build-release.ps1
player-status-modifier-v1.05.01-fix37/: BUILD_FIX_11B_OUTGOING_DAMAGE_COMPILE_FIX.md  CMakeLists.txt  DragonLimit.md  FIX24_CACHED_GROUND_MOUNT_LIVENESS.md  FIX30_AFFINITY_FRIENDLY_HIT_DIAGNOSTICS.md  FIX34_ITEM_GAIN_AFFINITY_DIAGNOSTICS.md  FIX35_AFFINITY_DATA_PATCH_COMPANION.md  FIX36_AFFINITY_DONATE_PET_BASE_OPEN.md  GITHUB_UPLOAD_NOTES_FIX30.md  GITHUB_UPLOAD_NOTES_FIX34.md  SAFE_RELEASE_MANIFEST.md  SECURITY.md  SHA256SUMS.txt  player-status-modifier.ini  research-note-stamina.md
player-status-modifier-v1.05.01-fix37/note/: stamina-dual-flow-todo-2026-04-14.md
player-status-modifier-v1.05.01-fix37/researches/: damage_research.md
player-status-modifier-v1.05.01-fix37/src/: dllmain.cpp  ptrchain.cpp  ptrchain.h  scanner.cpp
player-status-modifier-v1.05.01-fix37/src/hooks/: affinity_hooks.cpp  dragon_limit_hooks.cpp  economy_hooks.cpp  player_hooks.cpp
player-status-modifier-v1.05.01-fix37/src/runtime/: durability_logic.cpp  durability_logic.h  mount_resolver.cpp  stat_logic.cpp
player-status-modifier-v1.05.01-fix37/tools/: build-release.ps1
(+112 files in other folders)
